| Summary: | ASTERISK-20103: chan_motif causes Asterisk to fail to load with either no motif.conf, or the sample config | ||
| Reporter: | Terry Wilson (twilson) | Labels: | |
| Date Opened: | 2012-07-09 11:48:11 | Date Closed: | 2012-07-11 11:42:14 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | chan_motif returns AST_MODULE_LOAD_FAILURE instead of AST_MODULE_LOAD_DECLINE in module_load() when there is a problem. This stops Asterisk from loading instead of just the module. In addition to this, the sample config itself has errors, so by default if chan_motif is built, Asterisk will not load without modifying the config file. The errors produced are: {noformat} [Jul 9 11:37:51] ERROR[9360]: chan_motif.c:2391 custom_connection_handler: Connection 'local-jabber-account' configured on endpoint 'jingle-endpoint' could not be found [Jul 9 11:37:51] ERROR[9360]: config_options.c:515 aco_process_var: Error parsing connection=local-jabber-account at line 74 of [Jul 9 11:37:51] ERROR[9360]: config_options.c:357 process_category: In motif.conf: Processing options for jingle-endpoint failed [Jul 9 11:37:51] ERROR[9360]: chan_motif.c:2457 load_module: Unable to read config file motif.conf. Not loading module. {noformat} The return should be modified to AST_MODULE_LOAD_DECLINE and the sample config should be made in such a way as to pass the config processing. Joshua is currently working on the code and asked that I not make any commits to it right now and instead to create an issue. Here it is! | ||
| Comments: | |||